--- a/delivery-boy-map-tracking.html
+++ b/delivery-boy-map-tracking.html
@@ -5,35 +5,35 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="zomo" />
-    <meta name="keywords" content="zomo" />
-    <meta name="author" content="zomo" />
-    <link rel="manifest" href="../manifest.json" />
+    <meta name="description" content="Dhesi Delivery Boy" />
+    <meta name="keywords" content="Dhesi Delivery Boy" />
+    <meta name="author" content="Dhesi Delivery Boy" />
+    <link rel="manifest" href="manifest.json" />
 
-    <link rel="icon" href="../assets/images/logo/favicon.png" type="image/x-icon" />
-    <title>zomo App</title>
-    <link rel="apple-touch-icon" href="../assets/images/logo/favicon.png" />
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <title>Dhesi Delivery Boy App</title>
+    <link rel="apple-touch-icon" href="favicon.png" />
     <meta name="theme-color" content="#ff8d2f" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="zomo" />
-    <meta name="msapplication-TileImage" content="../assets/images/logo/favicon.png" />
+    <meta name="apple-mobile-web-app-title" content="Dhesi Delivery Boy" />
+    <meta name="msapplication-TileImage" content="favicon.png" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- font link -->
-    <link rel="stylesheet" href="../assets/css/vendors/metropolis.min.css" />
+    <link rel="stylesheet" href="metropolis.min.css" />
 
     <!-- remixicon css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/remixicon.css" />
+    <link rel="stylesheet" type="text/css" href="remixicon.css" />
 
     <!-- bootstrap css -->
-    <link rel="stylesheet" id="rtl-link" type="text/css" href="../assets/css/vendors/bootstrap.min.css" />
+    <link rel="stylesheet" id="rtl-link" type="text/css" href="bootstrap.min.css" />
 
     <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
 
     <!-- Theme css -->
-    <link rel="stylesheet" id="change-link" type="text/css" href="../assets/css/style.css" />
+    <link rel="stylesheet" id="change-link" type="text/css" href="style.css" />
 </head>
 
 <body>
@@ -46,20 +46,20 @@
     <!-- tracking popup start -->
     <div class="tracking-product">
         <div class="tracking-head">
-            <img class="img-fluid profile-pic" src="../assets/images/icons/pro1.png" alt="pro1" />
+            <img class="img-fluid profile-pic" src="pro1.png" alt="pro1" />
             <div>
                 <h5>Guy Hawkins</h5>
                 <h6 class="mt-1">Courier Boy</h6>
             </div>
             <div class="content-option">
                 <a href="#">
-                    <img class="img-fluid document-icon" src="../assets/images/svg/note.svg" alt="note" />
+                    <img class="img-fluid document-icon" src="note.svg" alt="note" />
                 </a>
                 <a href="#">
-                    <img class="img-fluid message-icon" src="../assets/images/svg/message.svg" alt="message" />
+                    <img class="img-fluid message-icon" src="message.svg" alt="message" />
                 </a>
                 <a href="#">
-                    <img class="img-fluid call-icon" src="../assets/images/svg/call-fill.svg" alt="call" />
+                    <img class="img-fluid call-icon" src="call-fill.svg" alt="call" />
                 </a>
             </div>
         </div>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="modal-body p-0">
                     <div class="confirm-title">
-                        <img class="img-fluid confirm-offer" src="../assets/images/delivery-boy/gif/done.gif"
+                        <img class="img-fluid confirm-offer" src="done.gif"
                             alt="done">
                         <h2 class="dark-text text-center fw-semibold mt-2">Congratulation!!</h2>
                         <h5 class="mt-3 text-center w-100 light-text mx-auto">You have completed order number ACR148856
@@ -107,14 +107,14 @@
     <!-- delivery modal end -->
 
     <!-- bootstrap js -->
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
 
     <!-- google map js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGCQvcXUsXwCdYArPXo72dLZ31WS3WQRw"></script>
-    <script src="../assets/js/route-map.js"></script>
+    <script src="route-map.js"></script>
 
     <!-- script js -->
-    <script src="../assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
