--- a/order-deliveries.html
+++ b/order-deliveries.html
@@ -5,33 +5,33 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="zomo" />
-    <meta name="keywords" content="zomo" />
-    <meta name="author" content="zomo" />
-    <link rel="manifest" href="../manifest.json" />
+    <meta name="description" content="Dhesi Delivery Boy" />
+    <meta name="keywords" content="Dhesi Delivery Boy" />
+    <meta name="author" content="Dhesi Delivery Boy" />
+    <link rel="manifest" href="manifest.json" />
 
-    <link rel="icon" href="../assets/images/logo/favicon.png" type="image/x-icon" />
-    <title>zomo App</title>
-    <link rel="apple-touch-icon" href="../assets/images/logo/favicon.png" />
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <title>Dhesi Delivery Boy App</title>
+    <link rel="apple-touch-icon" href="favicon.png" />
     <meta name="theme-color" content="#ff8d2f" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="zomo" />
-    <meta name="msapplication-TileImage" content="../assets/images/logo/favicon.png" />
+    <meta name="apple-mobile-web-app-title" content="Dhesi Delivery Boy" />
+    <meta name="msapplication-TileImage" content="favicon.png" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- font link -->
-    <link rel="stylesheet" href="../assets/css/vendors/metropolis.min.css" />
+    <link rel="stylesheet" href="metropolis.min.css" />
 
     <!-- remixicon css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/remixicon.css" />
+    <link rel="stylesheet" type="text/css" href="remixicon.css" />
 
     <!-- bootstrap css -->
-    <link rel="stylesheet" id="rtl-link" type="text/css" href="../assets/css/vendors/bootstrap.min.css" />
+    <link rel="stylesheet" id="rtl-link" type="text/css" href="bootstrap.min.css" />
 
     <!-- Theme css -->
-    <link rel="stylesheet" id="change-link" type="text/css" href="../assets/css/style.css" />
+    <link rel="stylesheet" id="change-link" type="text/css" href="style.css" />
 </head>
 
 <body>
@@ -72,7 +72,7 @@
                                 <div class="earning-box">
                                     <div class="earning-img">
                                         <img class="img-fluid earning-icon"
-                                            src="../assets/images/delivery-boy/svg/receipt.svg" alt="receipt">
+                                            src="receipt.svg" alt="receipt">
                                     </div>
 
                                     <div class="earning-content">
@@ -102,7 +102,7 @@
                                 </div>
 
                             </div>
-                            <img class="img-fluid w-100 mt-2" src="../assets/images/delivery-boy/map.png" alt="map">
+                            <img class="img-fluid w-100 mt-2" src="map.png" alt="map">
                         </li>
 
                         <li>
@@ -110,7 +110,7 @@
                                 <div class="earning-box">
                                     <div class="earning-img">
                                         <img class="img-fluid earning-icon"
-                                            src="../assets/images/delivery-boy/svg/receipt.svg" alt="receipt">
+                                            src="receipt.svg" alt="receipt">
                                     </div>
 
                                     <div class="earning-content">
@@ -140,7 +140,7 @@
                                 </div>
 
                             </div>
-                            <img class="img-fluid w-100 mt-2" src="../assets/images/delivery-boy/map.png" alt="map">
+                            <img class="img-fluid w-100 mt-2" src="map.png" alt="map">
                         </li>
 
                         <li>
@@ -148,7 +148,7 @@
                                 <div class="earning-box">
                                     <div class="earning-img">
                                         <img class="img-fluid earning-icon"
-                                            src="../assets/images/delivery-boy/svg/receipt.svg" alt="receipt">
+                                            src="receipt.svg" alt="receipt">
                                     </div>
 
                                     <div class="earning-content">
@@ -178,7 +178,7 @@
                                 </div>
 
                             </div>
-                            <img class="img-fluid w-100 mt-2" src="../assets/images/delivery-boy/map.png" alt="map">
+                            <img class="img-fluid w-100 mt-2" src="map.png" alt="map">
                         </li>
 
                         <li>
@@ -186,7 +186,7 @@
                                 <div class="earning-box">
                                     <div class="earning-img">
                                         <img class="img-fluid earning-icon"
-                                            src="../assets/images/delivery-boy/svg/receipt.svg" alt="receipt">
+                                            src="receipt.svg" alt="receipt">
                                     </div>
 
                                     <div class="earning-content">
@@ -216,7 +216,7 @@
                                 </div>
                             </div>
 
-                            <img class="img-fluid w-100 mt-2" src="../assets/images/delivery-boy/map.png" alt="map">
+                            <img class="img-fluid w-100 mt-2" src="map.png" alt="map">
                         </li>
                     </ul>
                 </div>
@@ -228,7 +228,7 @@
                                 <div class="earning-box">
                                     <div class="earning-img">
                                         <img class="img-fluid earning-icon"
-                                            src="../assets/images/delivery-boy/svg/receipt.svg" alt="receipt">
+                                            src="receipt.svg" alt="receipt">
                                     </div>
 
                                     <div class="earning-content">
@@ -258,7 +258,7 @@
                                 </div>
 
                             </div>
-                            <img class="img-fluid w-100 mt-2" src="../assets/images/delivery-boy/map.png" alt="map">
+                            <img class="img-fluid w-100 mt-2" src="map.png" alt="map">
                         </li>
 
                         <li>
@@ -266,7 +266,7 @@
                                 <div class="earning-box">
                                     <div class="earning-img">
                                         <img class="img-fluid earning-icon"
-                                            src="../assets/images/delivery-boy/svg/receipt.svg" alt="receipt">
+                                            src="receipt.svg" alt="receipt">
                                     </div>
 
                                     <div class="earning-content">
@@ -296,7 +296,7 @@
                                 </div>
 
                             </div>
-                            <img class="img-fluid w-100 mt-2" src="../assets/images/delivery-boy/map.png" alt="map">
+                            <img class="img-fluid w-100 mt-2" src="map.png" alt="map">
                         </li>
 
                         <li>
@@ -304,7 +304,7 @@
                                 <div class="earning-box">
                                     <div class="earning-img">
                                         <img class="img-fluid earning-icon"
-                                            src="../assets/images/delivery-boy/svg/receipt.svg" alt="receipt">
+                                            src="receipt.svg" alt="receipt">
                                     </div>
 
                                     <div class="earning-content">
@@ -334,7 +334,7 @@
                                 </div>
 
                             </div>
-                            <img class="img-fluid w-100 mt-2" src="../assets/images/delivery-boy/map.png" alt="map">
+                            <img class="img-fluid w-100 mt-2" src="map.png" alt="map">
                         </li>
                     </ul>
                 </div>
@@ -370,7 +370,7 @@
                                 <h5 class="fw-semibold amount">$24</h5>
                             </div>
 
-                            <img class="dots-design" src="../assets/images/svg/dots-design.svg" alt="dots" />
+                            <img class="dots-design" src="dots-design.svg" alt="dots" />
                         </div>
                     </div>
 
@@ -441,7 +441,7 @@
                                 <h5 class="fw-semibold amount">$24</h5>
                             </div>
 
-                            <img class="dots-design" src="../assets/images/svg/dots-design.svg" alt="dots" />
+                            <img class="dots-design" src="dots-design.svg" alt="dots" />
                         </div>
                     </div>
 
@@ -488,10 +488,10 @@
     <!-- order modal end -->
 
     <!-- bootstrap js -->
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
 
     <!-- script js -->
-    <script src="../assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
