--- a/profile.html
+++ b/profile.html
@@ -5,40 +5,40 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="zomo" />
-    <meta name="keywords" content="zomo" />
-    <meta name="author" content="zomo" />
-    <link rel="manifest" href="../manifest.json" />
+    <meta name="description" content="Dhesi Delivery Boy" />
+    <meta name="keywords" content="Dhesi Delivery Boy" />
+    <meta name="author" content="Dhesi Delivery Boy" />
+    <link rel="manifest" href="manifest.json" />
 
-    <link rel="icon" href="../assets/images/logo/favicon.png" type="image/x-icon" />
-    <title>zomo App</title>
-    <link rel="apple-touch-icon" href="../assets/images/logo/favicon.png" />
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <title>Dhesi Delivery Boy App</title>
+    <link rel="apple-touch-icon" href="favicon.png" />
     <meta name="theme-color" content="#ff8d2f" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="zomo" />
-    <meta name="msapplication-TileImage" content="../assets/images/logo/favicon.png" />
+    <meta name="apple-mobile-web-app-title" content="Dhesi Delivery Boy" />
+    <meta name="msapplication-TileImage" content="favicon.png" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- font link -->
-    <link rel="stylesheet" href="../assets/css/vendors/metropolis.min.css" />
+    <link rel="stylesheet" href="metropolis.min.css" />
 
     <!-- remixicon css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/remixicon.css" />
+    <link rel="stylesheet" type="text/css" href="remixicon.css" />
 
     <!-- bootstrap css -->
-    <link rel="stylesheet" id="rtl-link" type="text/css" href="../assets/css/vendors/bootstrap.min.css" />
+    <link rel="stylesheet" id="rtl-link" type="text/css" href="bootstrap.min.css" />
 
     <!-- Theme css -->
-    <link rel="stylesheet" id="change-link" type="text/css" href="../assets/css/style.css" />
+    <link rel="stylesheet" id="change-link" type="text/css" href="style.css" />
 </head>
 
 <body>
     <!-- side bar start -->
     <div class="offcanvas sidebar-offcanvas offcanvas-start" tabindex="-1" id="offcanvasLeft">
         <div class="offcanvas-header">
-            <img class="img-fluid profile-pic" src="../assets/images/icons/profile.png" alt="profile" />
+            <img class="img-fluid profile-pic" src="profile.png" alt="profile" />
             <h3>Hello, Lina John</h3>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -105,7 +105,7 @@
     <section>
         <div class="custom-container">
             <div class="profile-cover">
-                <img class="img-fluid profile-pic" src="../assets/images/icons/profile.png" alt="profile" />
+                <img class="img-fluid profile-pic" src="profile.png" alt="profile" />
             </div>
             <div class="profile-name">
                 <h5>Lina John</h5>
@@ -132,7 +132,7 @@
                 <li>
                     <div class="profile-box">
                         <div class="profile-icon">
-                            <img class="img-fluid icon" src="../assets/images/svg/profile.svg" alt="profile" />
+                            <img class="img-fluid icon" src="profile.svg" alt="profile" />
                         </div>
                         <a href="profile-setting.html" class="profile-box-name">
                             <h5>Profile Setting</h5>
@@ -144,7 +144,7 @@
                 <li>
                     <div class="profile-box">
                         <div class="profile-icon">
-                            <img class="img-fluid icon" src="../assets/images/svg/manage-payment.svg" alt="Payment" />
+                            <img class="img-fluid icon" src="manage-payment.svg" alt="Payment" />
                         </div>
                         <a href="share-earn.html" class="profile-box-name">
                             <h5>Share & Earn</h5>
@@ -156,7 +156,7 @@
                 <li>
                     <div class="profile-box">
                         <div class="profile-icon">
-                            <img class="img-fluid icon" src="../assets/images/svg/notification-bing.svg" alt="bell" />
+                            <img class="img-fluid icon" src="notification-bing.svg" alt="bell" />
                         </div>
                         <a href="notification-setting.html" class="profile-box-name">
                             <h5>Notification Setting</h5>
@@ -167,7 +167,7 @@
                 <li>
                     <div class="profile-box">
                         <div class="profile-icon">
-                            <img class="img-fluid icon" src="../assets/images/svg/logout.svg" alt="logout" />
+                            <img class="img-fluid icon" src="logout.svg" alt="logout" />
                         </div>
                         <a href="login.html" class="profile-box-name">
                             <h5>Log Out</h5>
@@ -189,16 +189,16 @@
         <ul>
             <li class="w-25">
                 <a href="home.html" class="icon">
-                    <img class="unactive" src="../assets/images/svg/home.svg" alt="home" />
-                    <img class="active" src="../assets/images/svg/home-fill.svg" alt="home" />
+                    <img class="unactive" src="home.svg" alt="home" />
+                    <img class="active" src="home-fill.svg" alt="home" />
                     <span>Home</span>
                 </a>
             </li>
             <li class="w-25">
                 <a href="earning.html" class="icon">
 
-                    <img class="unactive" src="../assets/images/svg/earning.svg" alt="earning" />
-                    <img class="active" src="../assets/images/svg/earning-fill.svg" alt="earning" />
+                    <img class="unactive" src="earning.svg" alt="earning" />
+                    <img class="active" src="earning-fill.svg" alt="earning" />
                     <span>Earning</span>
                 </a>
             </li>
@@ -206,16 +206,16 @@
             <li class="w-25">
                 <a href="history.html" class="icon">
 
-                    <img class="unactive" src="../assets/images/svg/clock.svg" alt="clock" />
-                    <img class="active" src="../assets/images/svg/clock-fill.svg" alt="clock" />
+                    <img class="unactive" src="clock.svg" alt="clock" />
+                    <img class="active" src="clock-fill.svg" alt="clock" />
                     <span>History</span>
                 </a>
             </li>
             <li class="active w-25">
                 <a href="profile.html" class="icon">
 
-                    <img class="unactive" src="../assets/images/svg/user.svg" alt="user" />
-                    <img class="active" src="../assets/images/svg/user-fill.svg" alt="user" />
+                    <img class="unactive" src="user.svg" alt="user" />
+                    <img class="active" src="user-fill.svg" alt="user" />
                     <span>Profile</span>
                 </a>
             </li>
@@ -224,10 +224,10 @@
     <!-- bottom navbar end -->
 
     <!-- bootstrap js -->
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
 
     <!-- script js -->
-    <script src="../assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
