--- a/share-earn.html
+++ b/share-earn.html
@@ -5,33 +5,33 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="zomo" />
-    <meta name="keywords" content="zomo" />
-    <meta name="author" content="zomo" />
-    <link rel="manifest" href="../manifest.json" />
+    <meta name="description" content="Dhesi Delivery Boy" />
+    <meta name="keywords" content="Dhesi Delivery Boy" />
+    <meta name="author" content="Dhesi Delivery Boy" />
+    <link rel="manifest" href="manifest.json" />
 
-    <link rel="icon" href="../assets/images/logo/favicon.png" type="image/x-icon" />
-    <title>zomo App</title>
-    <link rel="apple-touch-icon" href="../assets/images/logo/favicon.png" />
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <title>Dhesi Delivery Boy App</title>
+    <link rel="apple-touch-icon" href="favicon.png" />
     <meta name="theme-color" content="#ff8d2f" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="zomo" />
-    <meta name="msapplication-TileImage" content="../assets/images/logo/favicon.png" />
+    <meta name="apple-mobile-web-app-title" content="Dhesi Delivery Boy" />
+    <meta name="msapplication-TileImage" content="favicon.png" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- font link -->
-    <link rel="stylesheet" href="../assets/css/vendors/metropolis.min.css" />
+    <link rel="stylesheet" href="metropolis.min.css" />
 
     <!-- remixicon css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/remixicon.css" />
+    <link rel="stylesheet" type="text/css" href="remixicon.css" />
 
     <!-- bootstrap css -->
-    <link rel="stylesheet" id="rtl-link" type="text/css" href="../assets/css/vendors/bootstrap.min.css" />
+    <link rel="stylesheet" id="rtl-link" type="text/css" href="bootstrap.min.css" />
 
     <!-- Theme css -->
-    <link rel="stylesheet" id="change-link" type="text/css" href="../assets/css/style.css" />
+    <link rel="stylesheet" id="change-link" type="text/css" href="style.css" />
 </head>
 
 <body>
@@ -52,7 +52,7 @@
     <section class="section-b-space pt-0">
         <div class="custom-container">
             <div class="gift-section">
-                <img class="img-fluid gift-img" src="../assets/images/delivery-boy/gif/gift.gif" alt="gift">
+                <img class="img-fluid gift-img" src="gift.gif" alt="gift">
                 <h2>Refer your friends and Earn</h2>
                 <p>Earn rewards by referring friends to order food from the app.</p>
                 <h5>Your referral code</h5>
@@ -84,7 +84,7 @@
                     <li>
                         <a href="https://web.telegram.org/k/">
                             <div class="media-box color-3">
-                                <img class="img-fluid media-icon" src="../assets/images/svg/send-fill.svg"
+                                <img class="img-fluid media-icon" src="send-fill.svg"
                                     alt="send-fill">
                             </div>
                             <h5>Telegram</h5>
@@ -105,10 +105,10 @@
     <!-- share-earn section end -->
 
     <!-- bootstrap js -->
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
 
     <!-- script js -->
-    <script src="../assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
