--- a/home.html
+++ b/home.html
@@ -5,43 +5,43 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="zomo" />
-    <meta name="keywords" content="zomo" />
-    <meta name="author" content="zomo" />
-    <link rel="manifest" href="../manifest.json" />
+    <meta name="description" content="Dhesi Delivery Boy" />
+    <meta name="keywords" content="Dhesi Delivery Boy" />
+    <meta name="author" content="Dhesi Delivery Boy" />
+    <link rel="manifest" href="manifest.json" />
 
-    <link rel="icon" href="../assets/images/logo/favicon.png" type="image/x-icon" />
-    <title>zomo App</title>
-    <link rel="apple-touch-icon" href="../assets/images/logo/favicon.png" />
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <title>Dhesi Delivery Boy App</title>
+    <link rel="apple-touch-icon" href="favicon.png" />
     <meta name="theme-color" content="#ff8d2f" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="zomo" />
-    <meta name="msapplication-TileImage" content="../assets/images/logo/favicon.png" />
+    <meta name="apple-mobile-web-app-title" content="Dhesi Delivery Boy" />
+    <meta name="msapplication-TileImage" content="favicon.png" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- font link -->
-    <link rel="stylesheet" href="../assets/css/vendors/metropolis.min.css" />
+    <link rel="stylesheet" href="metropolis.min.css" />
 
     <!-- remixicon css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/remixicon.css" />
+    <link rel="stylesheet" type="text/css" href="remixicon.css" />
 
     <!-- swiper css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/swiper-bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="swiper-bundle.min.css" />
 
     <!-- bootstrap css -->
-    <link rel="stylesheet" id="rtl-link" type="text/css" href="../assets/css/vendors/bootstrap.min.css" />
+    <link rel="stylesheet" id="rtl-link" type="text/css" href="bootstrap.min.css" />
 
     <!-- Theme css -->
-    <link rel="stylesheet" id="change-link" type="text/css" href="../assets/css/style.css" />
+    <link rel="stylesheet" id="change-link" type="text/css" href="style.css" />
 </head>
 
 <body>
     <!-- side bar start -->
     <div class="offcanvas sidebar-offcanvas offcanvas-start" tabindex="-1" id="offcanvasLeft">
         <div class="offcanvas-header">
-            <img class="img-fluid profile-pic" src="../assets/images/icons/profile.png" alt="profile" />
+            <img class="img-fluid profile-pic" src="profile.png" alt="profile" />
             <h3>Hello, Lina John</h3>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -132,7 +132,7 @@
                 <div class="earning-card-details">
                     <div>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid icon " src="../assets/images/delivery-boy/svg/wallet-money.svg"
+                            <img class="img-fluid icon " src="wallet-money.svg"
                                 alt="wallet-money">
                             <div class="earning-card-content ps-3">
 
@@ -150,17 +150,17 @@
             </div>
             <ul class="profile-details-list order-list">
                 <li>
-                    <img class="img-fluid icon" src="../assets/images/delivery-boy/svg/box.svg" alt="box">
+                    <img class="img-fluid icon" src="box.svg" alt="box">
                     <h2>15</h2>
                     <h6>Order</h6>
                 </li>
                 <li>
-                    <img class="img-fluid icon" src="../assets/images/delivery-boy/svg/box-time.svg" alt="box">
+                    <img class="img-fluid icon" src="box-time.svg" alt="box">
                     <h2>03</h2>
                     <h6>Pending</h6>
                 </li>
                 <li>
-                    <img class="img-fluid icon" src="../assets/images/delivery-boy/svg/box-tick.svg" alt="box">
+                    <img class="img-fluid icon" src="box-tick.svg" alt="box">
                     <h2>15</h2>
                     <h6>Completed</h6>
                 </li>
@@ -176,7 +176,7 @@
                     <a href="#order" data-bs-toggle="modal">
                         <div class="earning-box">
                             <div class="earning-img">
-                                <img class="img-fluid earning-icon" src="../assets/images/delivery-boy/svg/receipt.svg"
+                                <img class="img-fluid earning-icon" src="receipt.svg"
                                     alt="receipt">
                             </div>
 
@@ -207,14 +207,14 @@
                         </div>
 
                     </div>
-                    <img class="img-fluid mt-2 w-100" src="../assets/images/delivery-boy/map.png" alt="map">
+                    <img class="img-fluid mt-2 w-100" src="map.png" alt="map">
                 </li>
 
                 <li>
                     <a href="#order" data-bs-toggle="modal">
                         <div class="earning-box">
                             <div class="earning-img">
-                                <img class="img-fluid earning-icon" src="../assets/images/delivery-boy/svg/receipt.svg"
+                                <img class="img-fluid earning-icon" src="receipt.svg"
                                     alt="receipt">
                             </div>
 
@@ -245,7 +245,7 @@
                         </div>
 
                     </div>
-                    <img class="img-fluid mt-2 w-100" src="../assets/images/delivery-boy/map.png" alt="map">
+                    <img class="img-fluid mt-2 w-100" src="map.png" alt="map">
                 </li>
             </ul>
         </div>
@@ -261,16 +261,16 @@
         <ul>
             <li class="active w-25">
                 <a href="home.html" class="icon">
-                    <img class="unactive" src="../assets/images/svg/home.svg" alt="home" />
-                    <img class="active" src="../assets/images/svg/home-fill.svg" alt="home" />
+                    <img class="unactive" src="home.svg" alt="home" />
+                    <img class="active" src="home-fill.svg" alt="home" />
                     <span>Home</span>
                 </a>
             </li>
             <li class="w-25">
                 <a href="earning.html" class="icon">
 
-                    <img class="unactive" src="../assets/images/svg/earning.svg" alt="earning" />
-                    <img class="active" src="../assets/images/svg/earning-fill.svg" alt="earning" />
+                    <img class="unactive" src="earning.svg" alt="earning" />
+                    <img class="active" src="earning-fill.svg" alt="earning" />
                     <span>Earning</span>
                 </a>
             </li>
@@ -278,16 +278,16 @@
             <li class="w-25">
                 <a href="history.html" class="icon">
 
-                    <img class="unactive" src="../assets/images/svg/clock.svg" alt="clock" />
-                    <img class="active" src="../assets/images/svg/clock-fill.svg" alt="clock" />
+                    <img class="unactive" src="clock.svg" alt="clock" />
+                    <img class="active" src="clock-fill.svg" alt="clock" />
                     <span>History</span>
                 </a>
             </li>
             <li class="w-25">
                 <a href="profile.html" class="icon">
 
-                    <img class="unactive" src="../assets/images/svg/user.svg" alt="user" />
-                    <img class="active" src="../assets/images/svg/user-fill.svg" alt="user" />
+                    <img class="unactive" src="user.svg" alt="user" />
+                    <img class="active" src="user-fill.svg" alt="user" />
                     <span>Profile</span>
                 </a>
             </li>
@@ -376,7 +376,7 @@
                                 <h5 class="fw-semibold amount">$24</h5>
                             </div>
 
-                            <img class="dots-design" src="../assets/images/svg/dots-design.svg" alt="dots" />
+                            <img class="dots-design" src="dots-design.svg" alt="dots" />
                         </div>
                     </div>
 
@@ -447,7 +447,7 @@
                                 <h5 class="fw-semibold amount">$24</h5>
                             </div>
 
-                            <img class="dots-design" src="../assets/images/svg/dots-design.svg" alt="dots" />
+                            <img class="dots-design" src="dots-design.svg" alt="dots" />
                         </div>
                     </div>
 
@@ -495,10 +495,10 @@
     <!-- order modal end -->
 
     <!-- bootstrap js -->
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
 
     <!-- script js -->
-    <script src="../assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
