--- a/otp.html
+++ b/otp.html
@@ -50,9 +50,10 @@
   <!-- otp start -->
   <div class="custom-container">
     <div class="otp-verification">
-      <h3>We have sent a verification code to</h3>
-      <h3 class="otp-number mt-2">+(101) 635 546 23098</h3>
+        <h3>We have sent a verification code to</h3>
+        <h3 class="otp-number mt-2">+91 XXXXXXXXXX</h3>
     </div>
+</div>
     <form class="otp-form">
       <div class="form-input dark-border-gradient">
         <input type="number" class="form-control active" placeholder="0" id="five1" onkeyup="onKeyUpEvent(1, event)"
